apps/base/jellyfin/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    gethomepage.dev/href: "https://jellyfin.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyfin"
    gethomepage.dev/description: "Open-source media server"
    gethomepage.dev/app: jellyfin
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/jellyfin.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: media-jellyfin   # <- matches Helm-generated Service name
          port: 8096
  tls:
    secretName: wildcard-lab-mainertoo-com-tls
